--- a/Tests/UnitTests/Core/Detector/CMakeLists.txt
+++ b/Tests/UnitTests/Core/Detector/CMakeLists.txt
@@ -25,5 +25,5 @@ add_unittest(Portal PortalTests.cpp)
 add_unittest(PortalGenerators PortalGeneratorsTests.cpp)
 add_unittest(VolumeStructureBuilder VolumeStructureBuilderTests.cpp)
 add_unittest(MultiWireStructureBuilder MultiWireStructureBuilderTests.cpp)
-
+add_unittest(PFlowSurfaces PFlowSurfaces.cpp)
 
