Add first version of pflow volume builder tests.

--- a/Tests/UnitTests/Core/Detector/CMakeLists.txt
+++ b/Tests/UnitTests/Core/Detector/CMakeLists.txt
@@ -26,4 +26,5 @@ add_unittest(PortalGenerators PortalGeneratorsTests.cpp)
 add_unittest(VolumeStructureBuilder VolumeStructureBuilderTests.cpp)
 add_unittest(MultiWireStructureBuilder MultiWireStructureBuilderTests.cpp)
 add_unittest(PFlowSurfaces PFlowSurfaces.cpp)
+add_unittest(PFlowVolumeBuilderTests PFlowVolumeBuilderTests.cpp)
 
